5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4014/executions/1708_3061.log
== SUBMITION (2019-04-29 14:22:23) 
-- CODE:
x=int(input("tipo de ataque:"))
y=int(input("quantidade de unidades:"))
if(x<0):
	print("Entrada invalida")
	elif(x==terrestre):
		y=150
	print("DRAGON")
	elif(x==aereo):
		y=30
	print("RHAEGAL")
	elif(x==maritimo):
		y=40
		print("VISERION")
		
-- EXECUTION TIME:
0.127161
-- ERROR:
  File "/home/codebench/codes/1708/3061/main.py", line 5
    elif(x==terrestre):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:22:25) 
-- CODE:
x=int(input("tipo de ataque:"))
y=int(input("quantidade de unidades:"))
if(x<0):
	print("Entrada invalida")
	elif(x==terrestre):
		y=150
	print("DRAGON")
	elif(x==aereo):
		y=30
	print("RHAEGAL")
	elif(x==maritimo):
		y=40
		print("VISERION")
		
-- ERROR:
File "XXXX", line 5
    elif(x==terrestre):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:25:30) 
-- CODE:
x=int(input("tipo de ataque:"))
y=int(input("quantidade de unidades:"))
print("x","Y")
if(x<0):
	print("Entrada invalida")
	elif(x==terrestre):
		y=150
	print("DRAGON")
	elif(x==aereo):
		y=30
	print("RHAEGAL")
	elif(x==maritimo):
		y=40
		print("VISERION")
		
-- EXECUTION TIME:
0.131109
-- ERROR:
  File "/home/codebench/codes/1708/3061/main.py", line 6
    elif(x==terrestre):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:25:30) 
-- CODE:
x=int(input("tipo de ataque:"))
y=int(input("quantidade de unidades:"))
print("x","Y")
if(x<0):
	print("Entrada invalida")
	elif(x==terrestre):
		y=150
	print("DRAGON")
	elif(x==aereo):
		y=30
	print("RHAEGAL")
	elif(x==maritimo):
		y=40
		print("VISERION")
		
-- ERROR:
File "XXXX", line 6
    elif(x==terrestre):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:30:04) 
-- CODE:
x=int(input("tipo de ataque:"))
y=int(input("quantidade de unidades:"))
1-DROGON
2-RHAEGAL
3-VISERION
if(x<0):
	print("Entrada invalida")
	if(x==terrestre):
		y150
		print("DRAGON")
	elif(x==aereo):
		y=30
	print("RHAEGAL")
	elif(x==maritimo):
		y=40
		print("VISERION")
		
-- EXECUTION TIME:
0.165169
-- ERROR:
  File "/home/codebench/codes/1708/3061/main.py", line 14
    elif(x==maritimo):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:30:04) 
-- CODE:
x=int(input("tipo de ataque:"))
y=int(input("quantidade de unidades:"))
1-DROGON
2-RHAEGAL
3-VISERION
if(x<0):
	print("Entrada invalida")
	if(x==terrestre):
		y150
		print("DRAGON")
	elif(x==aereo):
		y=30
	print("RHAEGAL")
	elif(x==maritimo):
		y=40
		print("VISERION")
		
-- ERROR:
File "XXXX", line 14
    elif(x==maritimo):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:30:04) 
-- CODE:
x=int(input("tipo de ataque:"))
y=int(input("quantidade de unidades:"))
1-DROGON
2-RHAEGAL
3-VISERION
if(x<0):
	print("Entrada invalida")
	if(x==terrestre):
		y150
		print("DRAGON")
	elif(x==aereo):
		y=30
	print("RHAEGAL")
	elif(x==maritimo):
		y=40
		print("VISERION")
		
-- ERROR:
File "XXXX", line 14
    elif(x==maritimo):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:37:09) 
-- CODE:
x=int(input("tipo de ataque:"))
y=int(input("quantidade de unidades:"))
if(x<=0):
	print("Entrada invalida")
	if(x==terrestre):
		y=150
		print("DRAGON",1)
	if(x==aereo):
		y=30
	print("RHAEGAL",2)
	if(x==maritimo):
		y=40
		print("VISERION",3)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: 'AEREO'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:37:26) 
-- CODE:
x=int(input("tipo de ataque:"))
y=int(input("quantidade de unidades:"))
if(x<=0):
	print("Entrada invalida")
	if(x==terrestre):
		y=150
		print("DRAGON",1)
	if(x==aereo):
		y=30
	print("RHAEGAL",2)
	if(x==maritimo):
		y=40
		print("VISERION",3)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: 'AEREO'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:38:23) 
-- CODE:
x=int(input("tipo de ataque:"))
y=int(input("quantidade de unidades:"))
if(x<=0):
	print("Entrada invalida")
	if(x==terrestre):
		y=150
		print("DRAGON",1)
	if(x==aereo):
		y=30
	print("RHAEGAL",2)
	if(x==maritimo):
		y=40
		print("VISERION",3)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: 'AEREO'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:39:16) 
-- CODE:
x=(input("tipo de ataque:"))
y=int(input("quantidade de unidades:"))
if(x<=0):
	print("Entrada invalida")
	if(x==terrestre):
		y=150
		print("DRAGON",1)
	if(x==aereo):
		y=30
	print("RHAEGAL",2)
	if(x==maritimo):
		y=40
		print("VISERION",3)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(x<=0):
TypeError: '<=' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:39:41) 
-- CODE:
x=(input("tipo de ataque:"))
y=int(input("quantidade de unidades:"))
if(x<=0):
	print("Entrada invalida")
	if(x==terrestre):
		y=150
		print("DRAGON",1)
	if(x==aereo):
		y=30
	print("RHAEGAL",2)
	if(x==maritimo):
		y=40
		print("VISERION",3)
		
-- EXECUTION TIME:
0.13074
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1708/3061/main.py", line 3, in <module>
    if(x<=0):
TypeError: unorderable types: str() <= int()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:39:48) 
-- CODE:
x=(input("tipo de ataque:"))
y=int(input("quantidade de unidades:"))
if(x<=0):
	print("Entrada invalida")
	if(x==terrestre):
		y=150
		print("DRAGON",1)
	if(x==aereo):
		y=30
	print("RHAEGAL",2)
	if(x==maritimo):
		y=40
		print("VISERION",3)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(x<=0):
TypeError: '<=' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:40:49) 
-- CODE:
x=(input("tipo de ataque:"))
y=int(input("quantidade de unidades:"))
if(x<=0):
	print("Entrada invalida")
	if(x==terrestre):
		y=150
		print("DRAGON",1)
	if(x==aereo):
		y=30
	print("RHAEGAL",2)
	if(x==maritimo):
		y=40
		print("VISERION",3)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(x<=0):
TypeError: '<=' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:41:30) 
-- CODE:
x=(input("tipo de ataque:"))
y=int(input("quantidade de unidades:"))
if(x<=0):
	print("Entrada invalida")
	if(x==terrestre):
		y=150
		print("DRAGON",1)
	if(x==aereo):
		y=30
	print("RHAEGAL",2)
	if(x==maritimo):
		y=40
		print("VISERION",3)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(x<=0):
TypeError: '<=' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:42:31) 
-- CODE:
x=(input("tipo de ataque:"))
y=int(input("quantidade de unidades:"))
if(x<0):
	print("Entrada invalida")
	if(x==terrestre):
		y=150
		print("DRAGON",1)
	if(x==aereo):
		y=30
	print("RHAEGAL",2)
	if(x==maritimo):
		y=40
		print("VISERION",3)
		
-- EXECUTION TIME:
0.228459
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1708/3061/main.py", line 3, in <module>
    if(x<0):
TypeError: unorderable types: str() < int()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:42:32) 
-- CODE:
x=(input("tipo de ataque:"))
y=int(input("quantidade de unidades:"))
if(x<0):
	print("Entrada invalida")
	if(x==terrestre):
		y=150
		print("DRAGON",1)
	if(x==aereo):
		y=30
	print("RHAEGAL",2)
	if(x==maritimo):
		y=40
		print("VISERION",3)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(x<0):
TypeError: '<' not supported between instances of 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:44:51) 
-- CODE:
x=(input("tipo de ataque:"))
y=int(input("quantidade de unidades:"))
if(x==terrestre):
		y=150
		print("DRAGON",1)
	if(x==aereo):
		y=30
	   print("RHAEGAL",2)
	if(x==maritimo):
		y=40
		print("VISERION",3)
else:
	print("Entrada invalida")
	
		
-- EXECUTION TIME:
0.135347
-- ERROR:
  File "/home/codebench/codes/1708/3061/main.py", line 6
    if(x==aereo):
                ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:44:52) 
-- CODE:
x=(input("tipo de ataque:"))
y=int(input("quantidade de unidades:"))
if(x==terrestre):
		y=150
		print("DRAGON",1)
	if(x==aereo):
		y=30
	   print("RHAEGAL",2)
	if(x==maritimo):
		y=40
		print("VISERION",3)
else:
	print("Entrada invalida")
	
		
-- ERROR:
File "XXXX", line 6
    if(x==aereo):
                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:47:53) 
-- CODE:
x=(input("tipo de ataque:"))
y=int(input("quantidade de unidades:"))
if(x==terrestre):
		y=150
		print("DRAGON",1)
	if(x==aereo):
		y=30
	   print("RHAEGAL",2)
	if(x==maritimo):
		y=40
		print("VISERION",3)
else:
	print("Entrada invalida")
	
		
-- ERROR:
File "XXXX", line 6
    if(x==aereo):
                ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:53:50) 
-- CODE:
x=input("tipo de ataque:")
y=int(input("quantidade de unidades:"))
if(x==terrestre):
		y=150
		print("DRAGON",1)
	if(x==aereo):
		y=30
	   print("RHAEGAL",2)
	if(x==maritimo):
		y=40
		print("VISERION",3)
else:
	print("Entrada invalida")
	
		
-- EXECUTION TIME:
0.20997
-- ERROR:
  File "/home/codebench/codes/1708/3061/main.py", line 6
    if(x==aereo):
                ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
